--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cf-typegen": "wrangler types --env-interface CloudflareEnv env.d.ts"
   },
   "dependencies": {
+    "hono": "^4.6.18",
     "next": "15.1.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
