--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cf-typegen": "wrangler types --env-interface CloudflareEnv env.d.ts"
   },
   "dependencies": {
+    "drizzle-orm": "^0.39.0",
     "hono": "^4.6.18",
     "next": "15.1.5",
     "react": "^19.0.0",
@@ -25,6 +26,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "drizzle-kit": "^0.30.3",
     "eslint": "^9",
     "eslint-config-next": "15.1.5",
     "postcss": "^8",
