--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "hono": "^4.6.18",
     "next": "15.1.5",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@cloudflare/next-on-pages": "^1.13.7",
