--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "cf-typegen": "wrangler types --env-interface CloudflareEnv env.d.ts"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.10.0",
     "drizzle-orm": "^0.39.0",
     "hono": "^4.6.18",
     "next": "15.1.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
     "zod": "^3.24.1"
   },
   "devDependencies": {
